tests/dataset/tpc-ds/compiler/pl/q1.error
run: exit status 2
[]
ERROR: /tmp/q1.pl:58: user:main Unknown message: error('expect failed')
